<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".activity.ProductActivity">
    <item
            android:id="@+id/menu_notification"
            android:title="@string/notification"
            android:visible="false"
            app:actionLayout="@layout/action_bar_notification_icon"
            app:showAsAction="always"/>
    <item
            android:id="@+id/menu_filter"
            android:icon="@mipmap/filter"
            android:title="@string/filter"
            android:visible="false"
            app:showAsAction="always"/>
    <item
            android:id="@+id/menu_wallet"
            android:icon="@mipmap/wallet"
            android:title="@string/wallet"
            android:visible="false"
            app:showAsAction="always"/>
    <item
            android:id="@+id/menu_edit"
            android:icon="@mipmap/editwhite"
            android:title="@string/wallet"
            android:visible="false"
            app:showAsAction="always"/>
    <item
            android:id="@+id/menu_guru"
            android:title="@string/guru"
            android:visible="false"
            app:showAsAction="always"/>
</menu>