<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@mipmap/splash"
        android:layout_height="match_parent">
    <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/img_AppIcon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:srcCompat="@mipmap/logo"
            android:transitionName="img_logo"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="@dimen/_16sdp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_LetsPlay"
                style="@style/ButtonStyle"
                app:layout_constraintBottom_toTopOf="@+id/txt_referralCode"
                android:backgroundTint="@color/white"
                android:text="@string/let_s_play"
                android:layout_marginBottom="@dimen/_10sdp"
                android:textColor="@color/colorASPrimary"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"/>
        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_referralCode"
                app:layout_constraintBottom_toTopOf="@+id/txt_EnterCode"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/have_a_referral_code"
                style="@style/TextStyleLight"
                android:textColor="@color/textColorWelcome"
                android:textSize="@dimen/_13sdp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatTextView
                app:layout_constraintBottom_toBottomOf="parent"
                android:id="@+id/txt_EnterCode"
                android:paddingRight="@dimen/_10sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:text="@string/enter_code"
                style="@style/TextStyleSemiBold"
                android:textColor="@color/textColorWelcome"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextStyleLight"
                android:id="@+id/txt_AlreadyUser"
                android:text="@string/already_a_user"
                android:textColor="@color/textColorWelcome"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintBottom_toTopOf="@+id/txt_Login"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_Login"
                android:paddingRight="@dimen/_10sdp"
                android:paddingBottom="@dimen/_5sdp"
                android:text="@string/login"
                style="@style/TextStyleSemiBold"
                android:textColor="@color/textColorWelcome"
                app:layout_constraintStart_toStartOf="@id/txt_AlreadyUser"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>