<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:padding="@dimen/_16sdp"
        tools:showIn="@layout/activity_otp"
        android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/txt_VerifyNumber"
            style="@style/TextStyleSemiBold"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:textSize="@dimen/_18sdp"
            android:layout_width="match_parent"
            android:textColor="@color/textColorBlack"
            android:text="@string/verify_your_number"
            android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatTextView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_VerifyNumber"
            android:id="@+id/txt_VerifyNumberLabel"
            style="@style/TextStyleNormal"
            android:padding="@dimen/_10sdp"
            android:gravity="center"
            android:textSize="@dimen/_15sdp"
            android:layout_width="match_parent"
            android:textColor="@color/textColorBlack"
            android:text="@string/otp_has_been_sent_to_your_mobile_number"
            android:layout_height="wrap_content"/>
    <com.chaos.view.PinView
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/txt_VerifyNumberLabel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/otp_view"
            app:itemCount="6"
            android:focusableInTouchMode="true"
            android:itemBackground="@color/GrayColorOTP"
            android:cursorVisible="true"
            android:inputType="number"
            android:textColor="@color/textColorBlack"
            android:focusable="true"
            android:imeOptions="actionDone"
            app:viewType="rectangle"
            app:lineColor="@color/GrayColorOTP"
            app:itemHeight="@dimen/_40sdp"
            app:itemWidth="@dimen/_40sdp"
            android:background="@color/colorTransparent"
            android:textSize="@dimen/_13sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/otp_view"
            android:id="@+id/btn_Submit"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            style="@style/ButtonStyle"
            android:backgroundTint="@color/colorASPrimary"
            android:text="@string/submit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"/>
    <LinearLayout
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_Submit"
            android:id="@+id/resendOTPLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:gravity="center"
            android:orientation="horizontal">

        <TextView
                android:id="@+id/resendOTPTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resend_otp"
                android:textColor="@color/textColorBlack"
                android:textSize="@dimen/_12sdp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
